force-app/main/default/objects/Payment_Link__c/Payment_Link__c.object-meta.xml
<CustomObject>
    <description
  >Audit trail of N-Genius Pay-by-Link payment links raised from the standalone payment-link screen. Deliberately standalone — links are raised from a form, not from an Opportunity/Account/Contact. Status write-back (Paid/Declined/etc.) is NOT wired up yet; Status__c stays Sent and the paid fields stay empty until a webhook listener is added.</description>
    <label>Payment Link</label>
    <pluralLabel>Payment Links</pluralLabel>
    <nameField>
        <label>Payment Link Number</label>
        <type>AutoNumber</type>
        <displayFormat>PL-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>