force-app/main/default/objects/Payment_Link__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description
  >Amount requested, in major units (AED 25,000.00 = 25000.00). Automation-set; read-only for end users.</description>
</CustomField>