force-app/main/default/objects/Payment_Link__c/fields/API_Log__c.field-meta.xml
<CustomField>
    <fullName>API_Log__c</fullName>
    <label>API Log</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >Redacted request/response bodies. Populated only when NGenius_Setting__mdt.Log_API_Payloads__c is on. Tokens, auth headers and 13-19 digit runs are stripped before storage.</description>
</CustomField>