force-app/main/default/objects/Payment_Link__c/fields/Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Code__c</fullName>
    <label>Auth Code</label>
    <length>20</length>
    <type>Text</type>
    <description
  >Reserved for the future payment write-back. Unpopulated today.</description>
</CustomField>