force-app/main/default/objects/Payment_Link__c/fields/Card_Brand__c.field-meta.xml
<CustomField>
    <fullName>Card_Brand__c</fullName>
    <label>Card Brand</label>
    <length>20</length>
    <type>Text</type>
    <description
  >Reserved for the future write-back. Scheme name only — never card data.</description>
</CustomField>