force-app/main/default/objects/Payment_Link__c/fields/Card_Last4__c.field-meta.xml
<CustomField>
    <fullName>Card_Last4__c</fullName>
    <label>Card Last 4</label>
    <length>4</length>
    <type>Text</type>
    <description
  >Reserved for the future write-back. Last four digits only, never a full PAN.</description>
</CustomField>