force-app/main/default/objects/Payment_Link__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
    <description>ISO currency code sent to N-Genius.</description>
</CustomField>