force-app/main/default/objects/Payment_Link__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
    <description
  >What the payer is paying for; shown to the payer on the N-Genius page and email.</description>
</CustomField>