force-app/main/default/objects/Payment_Link__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
    <description
  >User-readable failure reason when Status is Error.</description>
</CustomField>