force-app/main/default/objects/Payment_Link__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
    <description
  >Date the payment link expires (invoiceExpiryDate sent to N-Genius).</description>
</CustomField>