force-app/main/default/objects/Payment_Link__c/fields/Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference__c</fullName>
    <label>Invoice Reference</label>
    <length>64</length>
    <type>Text</type>
    <externalId>true</externalId>
    <unique>true</unique>
    <description
  >N-Genius invoice reference returned when the Pay-by-Link invoice is created.</description>
</CustomField>