force-app/main/default/objects/Payment_Link__c/fields/Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference__c</fullName>
    <label>Order Reference</label>
    <length>64</length>
    <type>Text</type>
    <externalId>true</externalId>
    <description
  >Finance serial number (1001, 1002, …) drawn from Payment_Link_Serial__c and sent to N-Genius as the pay-by-link order reference. Assigned at reservation, before the callout.</description>
</CustomField>