force-app/main/default/objects/Payment_Link__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description
  >Reserved for the future payment write-back. Unpopulated today.</description>
</CustomField>