force-app/main/default/objects/Payment_Link__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <label>Paid Date</label>
    <type>DateTime</type>
    <description
  >Reserved for the future payment write-back. Unpopulated today.</description>
</CustomField>