force-app/main/default/objects/Payment_Link__c/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <label>Payment URL</label>
    <type>Url</type>
    <description
  >The customer-facing _links.payment.href value. Sensitive — anyone holding it can pay this invoice.</description>
</CustomField>