force-app/main/default/objects/Payment_Link__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
    <description>Address N-Genius emailed the payment link to.</description>
</CustomField>