force-app/main/default/objects/Payment_Link__c/fields/Recipient_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Mobile__c</fullName>
    <label>Recipient Mobile</label>
    <type>Phone</type>
    <description
  >International format, e.g. +971501234567. When present, N-Genius also sent an SMS.</description>
</CustomField>