force-app/main/default/objects/Payment_Link__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>121</length>
    <type>Text</type>
    <description>Payer name as typed on the form.</description>
</CustomField>