force-app/main/default/objects/Payment_Link__c/fields/Reference_Note__c.field-meta.xml
<CustomField>
    <fullName>Reference_Note__c</fullName>
    <label>Reference Note</label>
    <length>255</length>
    <type>Text</type>
    <description>Internal free-text reference, e.g. a unit code.</description>
</CustomField>