force-app/main/default/objects/Payment_Link__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <label>Sent Date</label>
    <type>DateTime</type>
    <description
  >When the link was created and emailed by N-Genius.</description>
</CustomField>