force-app/main/default/objects/Payment_Link__c/listViews/All_Payment_Links.listView-meta.xml
<ListView>
    <fullName>All_Payment_Links</fullName>
    <label>All Payment Links</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Amount__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Environment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
</ListView>