force-app/main/default/objects/Payment_Link__c/listViews/Needs_Attention.listView-meta.xml
<ListView>
    <fullName>Needs_Attention</fullName>
    <label>Needs Attention</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error,Generating</value>
    </filters>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Environment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
</ListView>